# seis-lab-data

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  alembic.ini  dev-log-config.yml  gdal_metadata_domains.md  mkdocs-pdf-admin-guide.yml  mkdocs-pdf-dev-guide.yml  mkdocs.yml  mkdocs_hooks.py  prod-log-config.yml  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  (+3 more)
.woodpecker/: deployment.yaml  production-deployment.yaml  test-deployment.yaml  tester.yaml
config/: preview-folders.json
docker/: Dockerfile  compose.ci.yaml  compose.dev.yaml  compose.prod-env.yaml  compose.test-env.yaml
docs/: acronyms.md  admin-guide.md  admin-guide.pt.md  archive-discovery.md  dataset-reference.md  dataset-reference.pt.md  development.md  development.pt.md  index.md  index.pt.md  sample-archive.md  supported-formats.md  supported-formats.pt.md  test-environment.pt.md  writing-docs.md
mkdocs/: mkdocs-pdf-admin-guide.yml  mkdocs-pdf-dev-guide.yml  mkdocs_hooks.py  mkdocs_pdf_hooks.py
scripts/: README.md  analyse_segy_reports.py  emodnet.py  gdalreader.py  geotiffreader.py  map-template.j2.html  mbtiles.py  metadata.py  probe_coords.py  quick-get-sample-data.sh  raster_image_reader.py  recreate_dirs.py  run-archive-validation.sh  sample-file-tree.txt  screenshotter.py  survey_extensions.py  validate_extractors.py  vector_fiona.py  vector_image_reader.py
tests/: conftest.py  test_db_commands.py  test_db_queries.py  test_extractors.py  test_operations_discovery.py  test_operations_surveyrelatedrecords.py  test_webapp_filters.py  test_webapp_home.py
(+322 files in other folders)
